# flair-lm-trainer

./: README.md  pyproject.toml
finetune_test_output/corpus/: test.txt  valid.txt
finetune_test_output/corpus/train/: train_split_1
finetune_test_output/model/: loss.txt
src/flair_lm_trainer/: __init__.py  cli.py  config.py  model_card.py  preprocess.py  publish.py  train.py
