[project]
name = "flair-lm-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "datasets>=4.5.0",
    "flair>=0.15.1",
    "huggingface-hub>=0.36.2",
]

[build-system]
requires = ["uv_build>=0.11.3,<0.12.0"]
build-backend = "uv_build"
[project.scripts]
flair-lm-train = "flair_lm_trainer.cli:main"